--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "serve": "vite preview"
+        "serve": "vite preview",
+        "min": "node squoosh.js"
     },
     "devDependencies": {
+        "@squoosh/lib": "^0.3.1",
         "cross-env": "^7.0.3",
         "sass": "^1.35.1",
         "vite": "^2.3.8"
