--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
         "@squoosh/lib": "^0.3.1",
         "cross-env": "^7.0.3",
         "sass": "^1.35.1",
-        "vite": "^2.3.8"
+        "vite": "^2.3.8",
+        "vite-plugin-html": "^2.0.7"
+    },
+    "dependencies": {
+        "aos": "next"
     }
 }
